fixed landing on mobile, working on services now.

--- a/css/common.css
+++ b/css/common.css
@@ -33,11 +33,9 @@ body {
 html {
   color: var(--black);
   font-size: 120%;
-  width: 100vw;
   background-color: var(--background-color);
 }
 .main-container {
-  width: 100vw;
   display: grid;
   grid-template-columns: 2fr 2fr 2fr 2fr;
   grid-template-areas:
@@ -63,18 +61,17 @@ nav ul li {
 nav {
   width: 100%;
 }
-
 * {
   margin: 0;
   padding: 0;
+  /* border: red solid 1px; */
 }
 .stack-open h2 {
   margin-left: auto;
   order: 2;
 }
-
 .nav-container {
-  height: 10vh;
+  min-height: 10vh;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-areas: "nav-banner . nav-links";
@@ -95,7 +92,6 @@ nav {
 .grid-item.nav {
   grid-area: header;
 }
-
 .button{
   text-decoration: none;
   font-size: 1rem;
@@ -107,8 +103,9 @@ nav {
     var(--orange) 50%,
     var(--dark-blue) 50%
   );
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
 }
-
 .button.button-light{
   background-image: linear-gradient(
     to right,
@@ -116,7 +113,6 @@ nav {
     var(--light-blue) 50%
   );
 }
-
 .bos-hover {
   /* https://wesbos.com/css-highlight-animation/ */
   background-size: 200%;
@@ -133,40 +129,11 @@ nav {
 @media (min-width: 763px) {
   .landing-container {
     height: 85vh;
-    display: grid;
-    align-items: center;
-    justify-items: center;
     overflow-x: hidden;
-    background: linear-gradient(
-        45deg,
-        var(--orange) 26%,
-        var(--orange) calc(26% - 1px),
-        transparent calc(26% - 1px)
-      ),
-      linear-gradient(
-        45deg,
-        var(--lighter-blue) 0%,
-        var(--lighter-blue) 27%,
-        transparent 27%
-      ),
-      linear-gradient(
-        0deg,
-        var(--lighter-blue) 0%,
-        var(--lighter-blue) calc(27% - 1px),
-        transparent 27%
-      ),
-      linear-gradient(
-        0deg,
-        var(--light-blue) 0%,
-        var(--light-blue) calc(27% - 1px),
-        transparent 27%
-      );
-    background-position-y: 0vh, 0vh, 20vh, 7.5vh;
-    background-repeat: no-repeat, no-repeat, no-repeat;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(6, 1fr);
     grid-template-areas:
-      "landing-subcontainer landing-subcontainer landing-image landing-image"
-      "landing-subcontainer landing-subcontainer . .";
+      "landing-subcontainer landing-subcontainer landing-image landing-image landing-image"
+      "landing-subcontainer landing-subcontainer . . .";
   }
   .landing-subcontainer {
     width: calc(50vw - 1rem);
@@ -177,12 +144,52 @@ nav {
     display: grid;
     align-items: center;
     justify-items: center;
-    overflow-x: hidden;
     grid-template-columns: repeat(1, 1fr);
     grid-template-areas:
       "landing-subcontainer"
       "landing-image";
   }
+  .landing-image img{
+    max-width: 100vw;
+    visibility: hidden;
+  }
+  .code{
+    max-width: 90%;
+    margin: 1rem;
+  }
+}
+
+.landing-container{
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  background: linear-gradient(
+      45deg,
+      var(--orange) 26%,
+      var(--orange) calc(26% - 1px),
+      transparent calc(26% - 1px)
+    ),
+    linear-gradient(
+      45deg,
+      var(--lighter-blue) 0%,
+      var(--lighter-blue) 27%,
+      transparent 27%
+    ),
+    linear-gradient(
+      0deg,
+      var(--lighter-blue) 0%,
+      var(--lighter-blue) calc(27% - 1px),
+      transparent 27%
+    ),
+    linear-gradient(
+      0deg,
+      var(--light-blue) 0%,
+      var(--light-blue) calc(27% - 1px),
+      transparent 27%
+    );
+  background-position-y: 0vh, 0vh, 20vh, 7.5vh;
+  background-repeat: no-repeat, no-repeat, no-repeat;
+  
 }
 .grid-content-item.landing-subcontainer {
   grid-area: landing-subcontainer;
@@ -197,28 +204,44 @@ nav {
 }
 .grid-content-item.landing-image {
   grid-area: landing-image;
-  padding-right: 90%;
 }
-.landing-subcontainer {
-  min-height: 80%;
-  padding: 1rem;
-  display: grid;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: contain;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-areas:
-    " . landing-banner landing-banner landing-banner . "
-    ". code code code ."
+.landing-image{
+  margin-top: 1.5rem;
 }
 
+@media (min-width: 763px) {
+  .landing-subcontainer {
+    min-height: 80%;
+    padding: 1rem;
+    display: grid;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: contain;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-areas:
+      " . landing-banner landing-banner landing-banner . "
+      ". code code code ."
+  }
+}
+
+@media (max-width: 763px) {
+  .landing-subcontainer {
+    display: grid;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: contain;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-areas:
+      "landing-banner"
+      "code"
+  }
+}
 .landing-banner {
   display: flex;
   justify-content: center;
   flex-direction: column;
   text-align: center;
 }
-
 .landing-banner h1 {
   font-size: 4rem;
 }
@@ -457,7 +480,7 @@ pre {
   justify-content: space-evenly;
   align-items: stretch;
   align-content: flex-start;
-  width: 100vw;
+  width: 100%;
 }
 .service-body{
   padding: 0;
@@ -494,7 +517,6 @@ pre {
   padding: 1rem;
 }
 .card-front img{
-  /* width: 100%; */
   height: 18rem;
   margin: 0 auto;
   display: flex;
@@ -654,6 +676,8 @@ border-radius: 2rem;
 
 /* CLOSING SECTION */
 .closing-section {
+  width: 100%;
+
   margin-top: calc(22vh - 1rem);
   position: fixed;
   top: 1px;
@@ -681,7 +705,6 @@ border-radius: 2rem;
 }
 .contact-inputs textarea, .contact-inputs input{
   font-family: "Source Sans Pro", sans-serif;
-
   margin: 0 auto;
   margin-top: 1rem;
   width: 90%;
@@ -708,7 +731,7 @@ border-radius: 2rem;
   background-color: var(--orange);
   text-align: center;
   padding: 0.25rem;
-  width: 100vw;
+  width: 100%;
   height: 3rem;
 }
 .contact-us label{
